Fix the alignment of the date

--- a/assets/style.css
+++ b/assets/style.css
@@ -602,6 +602,7 @@ iframe {
 .bottomdate {
   color: #888;
   font-size: 12px;
+  margin-left: 30px;
 }
 
 .bottomlogohome {
